「ならびかえ中」のときのスタイルなんかを修正．

--- a/static/pc/css/c/extra.css
+++ b/static/pc/css/c/extra.css
@@ -41,6 +41,10 @@
     background-color: #ffd8e9;
 }
 
+#items > ul > li.being_dragged {
+    box-shadow: 2px 2px 8px #484848;
+}
+
 #items ul li .main {
     padding: 4px;
     /* width: 33%; */
