--- a/static/pc/css/c/base.css
+++ b/static/pc/css/c/base.css
@@ -2,6 +2,12 @@ body {
 }
 
 
+a:link:hover,
+a:visited:hover {
+    color: #ff4769;
+}
+
+
 .textbox {
     color: #484848;
     background-color: #f0f0f0;
