--- a/static/pc/css/main.css
+++ b/static/pc/css/main.css
@@ -2,6 +2,11 @@ body {
     margin-top: 50px;
 }
 
+.navbar h1.brand a {
+    color: #fff;
+    text-decoration: none;
+}
+
 footer {
     text-align: right;
     padding-right: 10px;
